# keyboard_controller

./: .gitignore  .gitmodules  README.md
firmware/: CMakeLists.txt  notes.md
firmware/include/: dac.h  hardware_config.h  io.h  key_matrix.h  list.h  lkp_stack.h  mcp4921.h
firmware/src/: io.c  key_matrix.c  keyboard.c  lkp_stack.c  mcp4921.c
firmware/util/: program.sh
hardware/: keyboard-controller.kicad_prl  keyboard-controller.kicad_sch
hardware/keyboard-controller/: #auto_saved_files#  analog_input.kicad_sch  fp-lib-table  input_output.kicad_sch  key_matrix.kicad_sch  keyboard-controller.csv  keyboard-controller.kicad_pcb  keyboard-controller.kicad_prl  keyboard-controller.kicad_pro  keyboard-controller.kicad_sch  keyboard-controller.xml  power.kicad_sch  power.kicad_sch-bak  sym-lib-table
hardware/libraries/AEC_Capacitors.pretty/: C_Disc_D5.0mm_W2.5mm_P3.0mm.kicad_mod
hardware/libraries/Royal_Ohm_Resistors.pretty/: R_Axial_DIN0207_L6.8mm_D2.5mm_P10.16mm_Horizontal.kicad_mod
hardware/libraries/SamacSys_Parts/: SamacSys_Parts.dcm  SamacSys_Parts.lib
hardware/libraries/SamacSys_Parts/Alpha_Potentiometers.pretty/: Potentiometer_Alpha_RV09AF-40-20K-B1K_Single_Vertical.kicad_mod
hardware/libraries/SamacSys_Parts/SamacSys_Parts.3dshapes/: SR2612F-0107-18F5B-D8-S.stp  SR2612F-0112-38F5B-D8-S.stp
hardware/libraries/SamacSys_Parts/SamacSys_Parts.pretty/: NE555DR.kicad_mod  SR2612F011221R0BD8N.kicad_mod
hardware/libraries/WEALTH_METAL_Barrel_Jacks.pretty/: BarrelJack_Horizontal_2.1mm_WEALTH_METAL.kicad_mod
(+1 files in other folders)
